# say-it-aloud

./: .env.default  .gitignore  README.md  pyproject.toml
engine/: main.py  stt.py
